@@ -286,6 +286,8 @@ struct GERMLINE_INDEL_SCORING_DEVELOPMENT_FEATURES : public FeatureSet
         SampleRefAlleleDepthFraction,
         VariantAlleleQuality,
         F_GQ,
+        SamplePrimaryAltAlleleDepthFraction,
+        AltHaplotypeCountRatio,
         SIZE
     };
 
@@ -318,6 +320,10 @@ struct GERMLINE_INDEL_SCORING_DEVELOPMENT_FEATURES : public FeatureSet
             return "VariantAlleleQuality";
         case F_GQ:
             return "F_GQ";
+        case SamplePrimaryAltAlleleDepthFraction:
+            return "SamplePrimaryAltAlleleDepthFraction";
+        case AltHaplotypeCountRatio:
+            return "AltHaplotypeCountRatio";
         default:
             assert(false && "Unknown feature");
             return nullptr;
